--- a/analogue-film.html
+++ b/analogue-film.html
@@ -2,232 +2,318 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>PAGE TITLE – Mariana Torres</title>
+  <title>Analogue Film Practice – Mariana Torres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
   <link
-    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap"
     rel="stylesheet"
   />
 
   <style>
     :root {
-      --bg: #050608;
       --bg-soft: #090b10;
       --text-main: #f5f5f5;
       --text-muted: #a6a9b5;
       --accent: #78d3ff;
-      --max-width: 960px;
-    }
-
-    * {
-      box-sizing: border-box;
-      scroll-behavior: smooth;
+      --max-width: 1100px;
     }
 
     body {
       margin: 0;
+      padding: 0;
+      min-height: 100vh;
       background: radial-gradient(circle at top, #141623 0, #050608 55%);
       color: var(--text-main);
-      font-family: "Source Serif 4", Georgia, "Times New Roman", serif;
+      font-family: "Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
     }
 
-    a {
-      color: var(--accent);
+    /* ---------------- HEADER + MENU ---------------- */
+
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 68px;
+      background: rgba(5, 6, 8, 0.80);
+      backdrop-filter: blur(6px);
+      z-index: 1000;
+      /* sem linha de divisão */
+      /* border-bottom: 1px solid rgba(255, 255, 255, 0.08); */
+    }
+
+    nav {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      height: 100%;
+      padding: 0 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    /* Logotipo / Nome (link para Home) */
+    .brand {
+      font-family: "Bebas Kai";
+      font-size: 1.2rem;
+      letter-spacing: 0.17em;
+      color: var(--text-main);
       text-decoration: none;
     }
 
-    a:hover {
-      text-decoration: underline;
-    }
-
-    h1, h2, h3, h4 {
-      font-family: "Bebas Kai", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-      margin-top: 0;
-    }
-
-    p {
-      margin: 0 0 0.8rem;
-      line-height: 1.7;
-      font-size: 0.98rem;
-    }
-
-    .page {
-      min-height: 100vh;
-    }
-
-    .shell {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 18px 18px 60px;
-    }
-
-    @media (min-width: 768px) {
-      .shell {
-        padding: 28px 24px 80px;
-      }
-    }
-
-    /* NAVBAR */
-
-    .navbar {
-      position: sticky;
-      top: 0;
-      z-index: 20;
-      background: rgba(5, 6, 8, 0.96);
-      backdrop-filter: blur(16px);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
-    }
-
-    .navbar-inner {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 10px 18px;
+    /* Menu */
+    .menu {
+      list-style: none;
       display: flex;
+      gap: 22px;
+      margin: 0;
+      padding: 0;
+      font-size: 0.92rem;
+      color: var(--text-muted);
       align-items: center;
-      justify-content: space-between;
-      gap: 16px;
     }
 
-    .nav-logo {
-      font-family: "Bebas Kai", sans-serif;
-      font-size: 1.1rem;
-      letter-spacing: 0.18em;
+    .menu a {
+      color: inherit;
+      text-decoration: none;
+      position: relative;
+      padding-bottom: 2px;
+      white-space: nowrap;
     }
 
-    .nav-logo span {
+    .menu a:hover {
       color: var(--accent);
     }
 
-    .nav-links {
-      display: none;
-      gap: 18px;
-      font-size: 0.9rem;
-      color: var(--text-muted);
-    }
-
-    .nav-links a {
-      position: relative;
-      padding-bottom: 2px;
-    }
-
-    .nav-links a::after {
+    /* Underline hover */
+    .menu a::after {
       content: "";
       position: absolute;
       left: 0;
       bottom: 0;
-      width: 0;
+      width: 0%;
       height: 1px;
       background: var(--accent);
-      transition: width 0.16s ease-out;
+      transition: width 0.2s;
     }
 
-    .nav-links a:hover::after {
+    .menu a:hover::after {
       width: 100%;
     }
 
-    @media (min-width: 820px) {
-      .nav-links {
-        display: flex;
-      }
+    /* Dropdowns */
+    .dropdown {
+      position: relative;
     }
 
-    /* MAIN LAYOUT */
-
-    main {
-      padding-top: 28px;
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      top: 26px;
+      left: 0;
+      min-width: 220px;
+      background: rgba(5, 6, 8, 0.97);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 10px 0;
+      list-style: none;
+      z-index: 999;
     }
 
-    .page-header {
-      margin-bottom: 20px;
+    .dropdown-content li {
+      padding: 4px 14px;
+      white-space: nowrap;
     }
 
-    .page-header h1 {
-      font-size: 2rem;
-      margin-bottom: 0.3rem;
-    }
-
-    .page-header p {
+    .dropdown-content li a {
+      display: block;
       color: var(--text-muted);
-      font-size: 0.96rem;
     }
 
-    .footer {
-      padding-top: 20px;
-      border-top: 1px solid rgba(255, 255, 255, 0.06);
-      font-size: 0.8rem;
-      color: var(--text-muted);
+    .dropdown-content li a:hover {
+      color: var(--accent);
+      background: rgba(255, 255, 255, 0.06);
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    /* ---------------- HERO SECTION (Analogue Film Practice) ---------------- */
+
+    .page-shell {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      padding: 0 20px 80px;
+    }
+
+    .hero-page {
+      padding-top: 140px; /* compensa o header fixo */
+      padding-bottom: 40px;
       text-align: center;
-      margin-top: 40px;
+      max-width: 720px;
+      margin: 0 auto;
+    }
+
+    .hero-page h1 {
+      font-family: "Bebas Kai";
+      font-size: 3rem;
+      letter-spacing: 0.12em;
+      margin-bottom: 0.4rem;
+    }
+
+    .hero-page-sub {
+      color: var(--text-muted);
+      font-size: 1.05rem;
+      margin-bottom: 0.9rem;
+    }
+
+    .hero-page-text {
+      font-size: 1.01rem;
+      line-height: 1.7;
+      color: var(--text-muted);
+    }
+
+    /* ---------------- CONTENT BLOCKS ---------------- */
+
+    .practice-section {
+      margin-top: 34px;
+    }
+
+    .practice-block {
+      background: rgba(5, 6, 8, 0.72); /* caixa subtil */
+      border-radius: 10px;
+      padding: 18px 20px 16px;
+      border: 1px solid rgba(255, 255, 255, 0.12);
+      margin-bottom: 18px;
+    }
+
+    .practice-label {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      letter-spacing: 0.15em;
+      color: var(--text-muted);
+      margin-bottom: 0.35rem;
+    }
+
+    .practice-title {
+      font-family: "Bebas Kai";
+      font-size: 1.4rem;
+      letter-spacing: 0.09em;
+      margin-bottom: 0.4rem;
+    }
+
+    .practice-text {
+      font-size: 0.98rem;
+      line-height: 1.7;
+      color: var(--text-muted);
+      margin: 0;
+    }
+
+    @media (max-width: 600px) {
+      .hero-page h1 {
+        font-size: 2.5rem;
+        letter-spacing: 0.09em;
+      }
     }
   </style>
 </head>
+
 <body>
-  <div id="navbar-placeholder"></div>
-<script src="navbar-loader.js"></script>
+  <!-- ---------------- HEADER ---------------- -->
+  <header>
+    <nav>
+      <!-- Nome = link para Home -->
+      <a href="index.html" class="brand">MARIANA TORRES</a>
 
-  <div class="page">
-    <!-- NAVBAR (igual em todas as páginas) -->
-  <nav class="nav-links">
-  <div class="nav-item">
-    <a href="index.html">Home</a>
-  </div>
+      <ul class="menu">
+        <li><a href="about.html">About</a></li>
 
-  <div class="nav-item">
-    <a href="about.html">About</a>
-  </div>
+        <li class="dropdown">
+          <a href="projects.html">Projects ▾</a>
+          <ul class="dropdown-content">
+            <li><a href="artistic-works.html">Artistic Works</a></li>
+            <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
+          </ul>
+        </li>
 
-  <div class="nav-item has-dropdown">
-    <a href="projects.html">Projects</a>
-    <div class="dropdown-menu">
-      <a href="artistic-works.html">Artistic Works</a>
-      <a href="research-preservation.html">Research &amp; Preservation Works</a>
-    </div>
-  </div>
+        <li class="dropdown">
+          <a href="analogue-film.html">Analogue Film Practice ▾</a>
+          <ul class="dropdown-content">
+            <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
+            <li><a href="technical-documentation.html">Technical Documentation</a></li>
+            <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
+          </ul>
+        </li>
 
-  <div class="nav-item has-dropdown">
-    <a href="analogue-film.html">Analogue Film Practice</a>
-    <div class="dropdown-menu">
-      <a href="photochemical-techniques.html">Photochemical Techniques</a>
-      <a href="technical-documentation.html">Technical Documentation</a>
-      <a href="darkroom-lab.html">Darkroom / Lab Work</a>
-      <!-- Aqui pode aparecer uma âncora dentro de analogue-film.html se quiseres ter "Lab Notes" como secção interna -->
-      <!-- <a href="analogue-film.html#lab-notes">Lab Notes</a> -->
-    </div>
-  </div>
+        <li><a href="writing-publications.html">Writing &amp; Publications</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <div class="nav-item">
-    <a href="writing.html">Writing &amp; Publications</a>
-  </div>
-</nav>
+  <!-- ---------------- MAIN CONTENT ---------------- -->
+  <main class="page-shell">
+    <!-- HERO -->
+    <section class="hero-page">
+      <h1>ANALOGUE FILM PRACTICE</h1>
+      <div class="hero-page-sub">
+        Photochemical work, lab-based processes and technical experimentation with film.
+      </div>
+      <p class="hero-page-text">
+        This section gathers ongoing and past work developed with analogue film
+        – from photochemical manipulation and contact printing to documentation
+        of workflows, tests and lab practices that respond to the material
+        conditions of film as a medium.
+      </p>
+    </section>
 
+    <!-- CONTENT BLOCKS -->
+    <section class="practice-section">
+      <!-- Photochemical Techniques -->
+      <article class="practice-block">
+        <div class="practice-label">Analogue Film Practice</div>
+        <h2 class="practice-title">Photochemical Techniques</h2>
+        <p class="practice-text">
+          Notes, tests and projects developed through photochemical processes:
+          hand-processing, tinting and toning, contact printing, optical and
+          chemical interventions on the film strip. This includes experiments
+          with colour separation, masking, exposure variations and the
+          interaction between light, emulsion and chemistry.
+        </p>
+      </article>
 
-    <!-- CONTEÚDO ESPECÍFICO DE CADA PÁGINA -->
-    <main class="shell">
-      <section class="page-header">
-        <h1>PAGE TITLE</h1>
-        <p>Short intro / description for this page.</p>
-      </section>
+      <!-- Technical Documentation -->
+      <article class="practice-block">
+        <div class="practice-label">Analogue Film Practice</div>
+        <h2 class="practice-title">Technical Documentation</h2>
+        <p class="practice-text">
+          Documentation of workflows, setups and procedures: from camera and
+          projector configurations to lab protocols, testing charts, exposure
+          notes and workflow diagrams. This space is dedicated to collecting
+          the technical memory of each project – how things were done, what
+          worked, what failed, and what can be repeated or revisited.
+        </p>
+      </article>
 
-      <!-- Aqui vais pôr o conteúdo da página específica -->
-      <!-- Por agora podes deixar vazio e depois preencher. -->
-
-    </main>
-
-    <div class="footer">
-      © <span id="year"></span> Mariana Torres
-    </div>
-  </div>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+      <!-- Darkroom / Lab Work -->
+      <article class="practice-block">
+        <div class="practice-label">Analogue Film Practice</div>
+        <h2 class="practice-title">Darkroom / Lab Work</h2>
+        <p class="practice-text">
+          Work carried out in the lab and darkroom: processing sessions, print
+          tests, densitometry, enlarger setups and small-scale lab routines.
+          This includes reflections on working conditions, improvisation with
+          limited resources and the physical labour involved in sustaining
+          analogue film practices today.
+        </p>
+      </article>
+    </section>
+  </main>
 </body>
 </html>
+
 
 
