--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -2,208 +2,108 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>PAGE TITLE – Mariana Torres</title>
+  <title>Photochemical Techniques — Mariana Torres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap"
-    rel="stylesheet"
-  />
-
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <style>
-    :root {
-      --bg: #050608;
-      --bg-soft: #090b10;
-      --text-main: #f5f5f5;
-      --text-muted: #a6a9b5;
-      --accent: #78d3ff;
-      --max-width: 960px;
+    :root{--text:#f5f5f5;--muted:#a6a9b5;--accent:#78d3ff;--max:1100px}
+    html,body{height:100%}
+    body{
+      margin:0;background: url('Timeline2.gif.gif') center/cover fixed no-repeat;
+      color:var(--text);font-family:"Source Serif 4",serif;-webkit-font-smoothing:antialiased
     }
-
-    * {
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-    }
-
-    body {
-      margin: 0;
-      background: radial-gradient(circle at top, #141623 0, #050608 55%);
-      color: var(--text-main);
-      font-family: "Source Serif 4", Georgia, "Times New Roman", serif;
-      -webkit-font-smoothing: antialiased;
-    }
-
-    a {
-      color: var(--accent);
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    h1, h2, h3, h4 {
-      font-family: "Bebas Kai", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-      margin-top: 0;
-    }
-
-    p {
-      margin: 0 0 0.8rem;
-      line-height: 1.7;
-      font-size: 0.98rem;
-    }
-
-    .page {
-      min-height: 100vh;
-    }
-
-    .shell {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 18px 18px 60px;
-    }
-
-    @media (min-width: 768px) {
-      .shell {
-        padding: 28px 24px 80px;
-      }
-    }
-
-    /* NAVBAR */
-
-    .navbar {
-      position: sticky;
-      top: 0;
-      z-index: 20;
-      background: rgba(5, 6, 8, 0.96);
-      backdrop-filter: blur(16px);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
-    }
-
-    .navbar-inner {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 10px 18px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 16px;
-    }
-
-    .nav-logo {
-      font-family: "Bebas Kai", sans-serif;
-      font-size: 1.1rem;
-      letter-spacing: 0.18em;
-    }
-
-    .nav-logo span {
-      color: var(--accent);
-    }
-
-    .nav-links {
-      display: none;
-      gap: 18px;
-      font-size: 0.9rem;
-      color: var(--text-muted);
-    }
-
-    .nav-links a {
-      position: relative;
-      padding-bottom: 2px;
-    }
-
-    .nav-links a::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 0;
-      height: 1px;
-      background: var(--accent);
-      transition: width 0.16s ease-out;
-    }
-
-    .nav-links a:hover::after {
-      width: 100%;
-    }
-
-    @media (min-width: 820px) {
-      .nav-links {
-        display: flex;
-      }
-    }
-
-    /* MAIN LAYOUT */
-
-    main {
-      padding-top: 28px;
-    }
-
-    .page-header {
-      margin-bottom: 20px;
-    }
-
-    .page-header h1 {
-      font-size: 2rem;
-      margin-bottom: 0.3rem;
-    }
-
-    .page-header p {
-      color: var(--text-muted);
-      font-size: 0.96rem;
-    }
-
-    .footer {
-      padding-top: 20px;
-      border-top: 1px solid rgba(255, 255, 255, 0.06);
-      font-size: 0.8rem;
-      color: var(--text-muted);
-      text-align: center;
-      margin-top: 40px;
-    }
+    /* HEADER */
+    header{position:fixed;inset:0 0 auto 0;height:68px;background:rgba(5,6,8,.8);backdrop-filter:blur(6px);z-index:1000}
+    nav{max-width:var(--max);margin:0 auto;height:100%;padding:0 20px;display:flex;align-items:center;justify-content:space-between}
+    .brand{font-family:"Bebas Kai";letter-spacing:.12em;font-size:1.1rem;color:var(--text);text-decoration:none}
+    .menu{list-style:none;margin:0;padding:0;display:flex;gap:22px;align-items:center;font-size:.92rem;color:var(--muted)}
+    .menu a{color:inherit;text-decoration:none;position:relative;padding-bottom:2px;white-space:nowrap}
+    .menu a:hover{color:var(--accent)}
+    .menu a::after{content:"";position:absolute;left:0;bottom:0;width:0;height:1px;background:var(--accent);transition:width .2s}
+    .menu a:hover::after{width:100%}
+    .dropdown{position:relative}
+    .dropdown-content{display:none;position:absolute;top:26px;left:0;min-width:220px;background:rgba(5,6,8,.97);border:1px solid rgba(255,255,255,.1);list-style:none;padding:8px 0;z-index:999}
+    .dropdown:hover .dropdown-content{display:block}
+    .dropdown-content li{padding:4px 14px}
+    .dropdown-content a{display:block;color:var(--muted)}
+    .dropdown-content a:hover{color:var(--accent);background:rgba(255,255,255,.06)}
+    .caret{font-size:.85em;opacity:.6;margin-left:4px}
+    /* HERO */
+    .hero{padding:150px 20px 28px;text-align:center}
+    .hero h1{font-family:"Bebas Kai";font-size:3.1rem;letter-spacing:.12em;margin:0 0 .3rem}
+    .hero p{color:var(--muted);margin:.2rem 0 0}
+    @media (max-width:600px){.hero h1{font-size:2.6rem;letter-spacing:.1em}}
+    /* CONTENT */
+    .wrap{max-width:var(--max);margin:0 auto;padding:0 20px 60px}
+    .card{background:rgba(8,10,14,.32);border:1px solid rgba(255,255,255,.08);backdrop-filter:blur(2px);
+      border-radius:10px;padding:18px 18px 16px;margin:18px 0}
+    .card h2{font-family:"Bebas Kai";letter-spacing:.1em;font-size:1.5rem;margin:.1rem 0 .4rem;color:var(--accent)}
+    .card p, .card li{color:var(--muted);line-height:1.7;font-size:1.02rem}
+    ul{margin:.4rem 0 .2rem 1.1rem}
   </style>
 </head>
 <body>
-  <div class="page">
-    <!-- NAVBAR (igual em todas as páginas) -->
-    <header class="navbar">
-      <div class="navbar-inner">
-        <div class="nav-logo">MARIANA <span>TORRES</span></div>
-        <nav class="nav-links">
-          <a href="index.html">Home</a>
-          <a href="about.html">About / CV / Contact</a>
-          <a href="projects.html">Projects</a>
-          <a href="analogue-film.html">Analogue Film Practice</a>
-          <a href="writing.html">Writing & Publications</a>
-          <!-- Lab Notes é opcional; podes tirar se não usares -->
-          <a href="lab-notes.html">Lab Notes</a>
-        </nav>
-      </div>
-    </header>
+  <header>
+    <nav>
+      <a class="brand" href="index.html">MARIANA TORRES</a>
+      <ul class="menu">
+        <li><a href="about.html">About</a></li>
+        <li class="dropdown">
+          <a href="projects.html">Projects <span class="caret">▾</span></a>
+          <ul class="dropdown-content">
+            <li><a href="artistic-works.html">Artistic Works</a></li>
+            <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="analogue-film.html">Analogue Film Practice <span class="caret">▾</span></a>
+          <ul class="dropdown-content">
+            <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
+            <li><a href="technical-documentation.html">Technical Documentation</a></li>
+            <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
+          </ul>
+        </li>
+        <li><a href="writing-publications.html">Writing &amp; Publications</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- CONTEÚDO ESPECÍFICO DE CADA PÁGINA -->
-    <main class="shell">
-      <section class="page-header">
-        <h1>PAGE TITLE</h1>
-        <p>Short intro / description for this page.</p>
-      </section>
+  <section class="hero">
+    <h1>PHOTOCHEMICAL TECHNIQUES</h1>
+    <p>Manual inspection · wet-gate · RGB separations · duplication · optical effects</p>
+  </section>
 
-      <!-- Aqui vais pôr o conteúdo da página específica -->
-      <!-- Por agora podes deixar vazio e depois preencher. -->
+  <main class="wrap">
+    <section class="card">
+      <h2>Overview</h2>
+      <p>
+        Practical notes on film handling and photochemical workflows used across projects:
+        repair of perforations, cement/tape splices, shrinkage checks, cleaning, and
+        preparation for scanning.
+      </p>
+    </section>
 
-    </main>
+    <section class="card">
+      <h2>Selected Processes</h2>
+      <ul>
+        <li>Wet-gate passes to minimize surface scratches and enhance base uniformity.</li>
+        <li>RGB separation &amp; recombination tests for color reconstruction.</li>
+        <li>Contact duplication and printer-light testing for density control.</li>
+        <li>Registration/stabilization prep for post workflows (TIFF/DPX).</li>
+      </ul>
+    </section>
 
-    <div class="footer">
-      © <span id="year"></span> Mariana Torres
-    </div>
-  </div>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+    <section class="card">
+      <h2>Notes &amp; Safety</h2>
+      <ul>
+        <li>Handling protocols by stock/base; ventilation &amp; PPE for solvents.</li>
+        <li>Documentation of each intervention and calibration reference frames.</li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
+
+
