--- a/research-preservation.html
+++ b/research-preservation.html
@@ -1,6 +1,283 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <title>Research & Preservation Works – Mariana Torres</title>
-  <meta name="viewport" content
+  <title>Research & Preservation Works — Mariana Torres</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Fonts -->
+  <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+
+  <style>
+    :root {
+      --text: #f5f5f5;
+      --muted: #a6a9b5;
+      --accent: #78d3ff;
+      --max: 1100px;
+    }
+
+    html, body {
+      height: 100%;
+    }
+
+    body {
+      margin: 0;
+      background: url('Timeline2.gif.gif') center/cover fixed no-repeat;
+      color: var(--text);
+      font-family: "Source Serif 4", serif;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    /* HEADER */
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 68px;
+      background: rgba(5, 6, 8, 0.80);
+      backdrop-filter: blur(6px);
+      z-index: 1000;
+    }
+
+    nav {
+      max-width: var(--max);
+      margin: 0 auto;
+      height: 100%;
+      padding: 0 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .brand {
+      font-family: "Bebas Kai";
+      font-size: 1.15rem;
+      letter-spacing: 0.16em;
+      color: var(--text);
+      text-decoration: none;
+    }
+
+    .menu {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      gap: 22px;
+      align-items: center;
+      color: var(--muted);
+      font-size: 0.92rem;
+    }
+
+    .menu a {
+      color: inherit;
+      text-decoration: none;
+      white-space: nowrap;
+      padding-bottom: 2px;
+      position: relative;
+    }
+
+    .menu a:hover {
+      color: var(--accent);
+    }
+
+    .menu a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      height: 1px;
+      width: 0%;
+      background: var(--accent);
+      transition: width 0.2s;
+    }
+
+    .menu a:hover::after {
+      width: 100%;
+    }
+
+    .dropdown {
+      position: relative;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      top: 26px;
+      left: 0;
+      background: rgba(5, 6, 8, 0.97);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      list-style: none;
+      padding: 10px 0;
+      min-width: 220px;
+      z-index: 999;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    .dropdown-content li {
+      padding: 4px 14px;
+    }
+
+    .dropdown-content a {
+      color: var(--muted);
+      display: block;
+    }
+
+    .dropdown-content a:hover {
+      color: var(--accent);
+      background: rgba(255, 255, 255, 0.06);
+    }
+
+    .caret {
+      font-size: 0.85em;
+      opacity: 0.6;
+      margin-left: 4px;
+    }
+
+    /* HERO */
+    .hero {
+      padding: 150px 20px 30px;
+      text-align: center;
+      max-width: 720px;
+      margin: 0 auto;
+    }
+
+    .hero h1 {
+      font-family: "Bebas Kai";
+      font-size: 3rem;
+      letter-spacing: 0.12em;
+      margin-bottom: 0.4rem;
+    }
+
+    .hero p {
+      color: var(--muted);
+      font-size: 1.05rem;
+      margin-top: 0.3rem;
+    }
+
+    /* PAGE STRUCTURE */
+    .wrapper {
+      max-width: var(--max);
+      margin: 0 auto;
+      padding: 0 20px 80px;
+    }
+
+    .card {
+      background: rgba(8, 10, 14, 0.32);
+      border: 1px solid rgba(255, 255, 255, 0.10);
+      backdrop-filter: blur(2px);
+      border-radius: 10px;
+      padding: 18px 20px 16px;
+      margin: 22px 0;
+    }
+
+    .card h2 {
+      font-family: "Bebas Kai";
+      font-size: 1.55rem;
+      letter-spacing: 0.1em;
+      margin: 0 0 0.5rem;
+      color: var(--accent);
+    }
+
+    .card p,
+    .card li {
+      color: var(--muted);
+      line-height: 1.7;
+      font-size: 1.02rem;
+    }
+
+    ul {
+      margin: 0.4rem 0 0.2rem 1.1rem;
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- HEADER -->
+  <header>
+    <nav>
+      <a href="index.html" class="brand">MARIANA TORRES</a>
+
+      <ul class="menu">
+        <li><a href="about.html">About</a></li>
+
+        <li class="dropdown">
+          <a href="projects.html">Projects <span class="caret">▾</span></a>
+          <ul class="dropdown-content">
+            <li><a href="artistic-works.html">Artistic Works</a></li>
+            <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
+          </ul>
+        </li>
+
+        <li class="dropdown">
+          <a href="analogue-film.html">Analogue Film Practice <span class="caret">▾</span></a>
+          <ul class="dropdown-content">
+            <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
+            <li><a href="technical-documentation.html">Technical Documentation</a></li>
+            <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
+          </ul>
+        </li>
+
+        <li><a href="writing-publications.html">Writing &amp; Publications</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- HERO -->
+  <section class="hero">
+    <h1>RESEARCH & PRESERVATION WORKS</h1>
+    <p>Archival study · reconstruction · cataloguing · historical research</p>
+  </section>
+
+  <!-- MAIN CONTENT -->
+  <main class="wrapper">
+
+    <section class="card">
+      <h2>Archival Investigations</h2>
+      <p>
+        Research projects carried out within film archives, involving identification,
+        inspection, cataloguing and contextual analysis of analogue film materials.
+      </p>
+      <ul>
+        <li>Filmographic reconstruction based on incomplete or fragmentary reels.</li>
+        <li>Inspection reports: shrinkage, perforation damage, base type, sound formats.</li>
+        <li>Contextual research on militant, countercultural and orphan film collections.</li>
+      </ul>
+    </section>
+
+    <section class="card">
+      <h2>Preservation & Restoration Processes</h2>
+      <p>
+        Workflows documenting the steps involved in stabilising, duplicating and preparing
+        film elements for digitisation or photochemical preservation.
+      </p>
+      <ul>
+        <li>Cleaning and repair of film elements prior to scanning or duplication.</li>
+        <li>Registry of printer-lights, shrinkage measurements and splice types.</li>
+        <li>Collaborative preservation projects with institutions and film labs.</li>
+      </ul>
+    </section>
+
+    <section class="card">
+      <h2>Case Studies & Research Notes</h2>
+      <p>
+        Notes from ongoing investigations into Portuguese and international archives,
+        including unfinished films, activist cinema and alternative film cultures.
+      </p>
+      <ul>
+        <li>Reconstruction notes for incomplete or abandoned film projects.</li>
+        <li>Analysis of archival metadata and provenance documentation.</li>
+        <li>Comparative study between analogue and digital reconstruction strategies.</li>
+      </ul>
+    </section>
+
+  </main>
+</body>
+
+</html>
