--- a/about.html
+++ b/about.html
@@ -50,6 +50,20 @@
         padding: 0 24px 80px;
       }
     }
+     /* Imagem grande debaixo da hero */
+
+    .featured-image {
+      width: 100%;
+      max-width: 1100px;
+      padding: 0 20px;
+    }
+
+    .featured-image img {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 4px;
+    }
 
     /* ---------------- HEADER + MENU (igual ao index) ---------------- */
 
@@ -339,6 +353,10 @@
       </main>
     </div>
   </div>
+    <!-- ---------------- FEATURED IMAGE SECTION ---------------- -->
+  <section class="featured-image">
+    <img src="pag2.png" alt="Featured work by Mariana Torres" />
+  </section>
 </body>
 </html>
 
