--- a/index.html
+++ b/index.html
@@ -207,24 +207,26 @@
   </header>
 
   <!-- HERO -->
-  <section class="hero">
-    <h1>MARIANA TORRES</h1>
-    <div class="hero-sub">Audiovisual Archivist & Moving Image Practitioner</div>
+.hero {
+  min-height: calc(100vh - 68px);
+  padding: 140px 20px 80px; 
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
 
-    <div class="hero-text-box">
-      <p class="hero-text">
-        I work between <strong>film archives</strong>, <strong>analogue technologies</strong> and
-        <strong>moving image practice</strong>. My interests cross preservation, projection,
-        photochemical experimentation and the afterlives of militant and countercultural cinema.
-      </p>
-    </div>
+.hero-inner {
+  max-width: 760px;
+  margin: 0 auto;
+  background: rgba(5, 6, 8, 0.74);
+  padding: 30px 26px;
+  border-radius: 8px;
+  text-align: center;
+}
 
-    <div class="hero-text-box">
-      <p class="hero-text">
-        This portfolio gathers <strong>artistic works</strong>, <strong>research</strong>,
-        and <strong>analogue film practice</strong>, alongside documentation of projects
-        developed with archives, festivals and cultural institutions.
-      </p>
+  </div>
+</section>
+
     </div>
   </section>
 
