--- a/about.html
+++ b/about.html
@@ -52,18 +52,13 @@
     }
      /* Imagem grande debaixo da hero */
 
-    .featured-image {
-      width: 100%;
-      max-width: 1100px;
-      padding: 0 8px;
-    }
+    .about-photo {
+  display: block;
+  margin: 0 auto 30px auto; /* centro + espaço por baixo */
+  max-width: 280px;         /* podes ajustar */
+  border-radius: 6px;       /* opcional - fica elegante */
+}
 
-    .featured-image img {
-      width: 100%;
-      height: auto;
-      display: block;
-      border-radius: 4px;
-    }
 
     /* ---------------- HEADER + MENU (igual ao index) ---------------- */
 
@@ -286,7 +281,7 @@
 
     <!-- ---------------- FEATURED IMAGE SECTION ---------------- -->
   <section class="featured-image">
-    <img src="pag2.png" alt="Featured work by Mariana Torres" />
+   <img src="about-photo.png" alt="Portrait" class="about-photo">
   </section>
 </body>
 </html>
