--- a/artistic-works.html
+++ b/artistic-works.html
@@ -233,12 +233,6 @@
 
     <h1>ARTISTIC WORKS</h1>
 
-    <p class="intro-text">
-      A selection of film performances, visual research, and moving image experiments exploring
-      analogue processes, projection, materiality and the embodied afterlives of cinema.
-    </p>
-
-
     <!-- ---------- PROJECT TEMPLATE (copy/paste for each work) ---------- -->
 
     <div class="project-item">
@@ -249,10 +243,27 @@
         A chromatic performance for multiple projectors exploring color separation, refraction
         and the physical gestures of projection. Developed through duplication experiments
         and optical filters.
-      </p>
+    </p>
+  </p>
 
-      <!-- Optional image -->
-      <!-- <img src="sendmeacolor.jpg" class="project-image"> -->
+  <!-- Vídeo Vimeo -->
+  <div class="video-wrapper">
+    <iframe 
+      src="https://vimeo.com/1081106970/70594f4e3f?share=copy" 
+      frameborder="0"
+      allow="autoplay; fullscreen"
+      allowfullscreen>
+    </iframe>
+  </div>
+
+  <!-- Galeria de Imagens -->
+  <div class="work-gallery">
+    <img src="pag1 (2).png="">
+    <img src="pag3.png" alt="">
+    <img src="pag4.png" alt="">
+  </div>
+</section>
+
     </div>
 
 
