--- a/artistic-works.html
+++ b/artistic-works.html
@@ -192,6 +192,39 @@
       border-radius: 6px;
       opacity: 0.9;
     }
+    /* --- Media Blocks for Artistic Works --- */
+
+.media-block {
+  max-width: 900px;
+  margin: 0 auto 45px;
+}
+
+.media-block img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 6px;
+  margin-bottom: 25px;
+}
+
+/* Vimeo video same size as images */
+.video-fixed {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 ratio */
+  margin-bottom: 25px;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.video-fixed iframe {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
   </style>
 </head>
 
@@ -246,22 +279,28 @@
     </p>
   </p>
 
-  <!-- Vídeo Vimeo -->
-  <div class="video-wrapper">
-    <iframe 
-      src="https://vimeo.com/1081106970/70594f4e3f?share=copy" 
-      frameborder="0"
-      allow="autoplay; fullscreen"
+ <section class="media-block">
+
+  <!-- IMAGEM 1 -->
+  <img src="color1.png" alt="Send Me a Color – image 1">
+
+  <!-- VÍDEO VIMEO (MESMAS DIMENSÕES) -->
+  <div class="video-fixed">
+    <iframe
+      src="https://player.vimeo.com/video/SEU_VIDEO_ID"
+      allow="autoplay; fullscreen; picture-in-picture"
       allowfullscreen>
     </iframe>
   </div>
 
-  <!-- Galeria de Imagens -->
-  <div class="work-gallery">
-    <img src="pag1 (2).png="">
-    <img src="pag3.png" alt="">
-    <img src="pag4.png" alt="">
-  </div>
+  <!-- IMAGEM 2 -->
+  <img src="color2.png" alt="Send Me a Color – image 2">
+
+  <!-- IMAGEM 3 -->
+  <img src="color3.png" alt="Send Me a Color – image 3">
+
+</section>
+
 </section>
 
     </div>
