--- a/artistic-works.html
+++ b/artistic-works.html
@@ -282,22 +282,22 @@
  <section class="media-block">
 
   <!-- IMAGEM 1 -->
-  <img src="color1.png" alt="Send Me a Color – image 1">
+  <img src="pag1 (2).png" alt="Send Me a Color – image 1">
 
   <!-- VÍDEO VIMEO (MESMAS DIMENSÕES) -->
   <div class="video-fixed">
     <iframe
-      src="https://player.vimeo.com/video/SEU_VIDEO_ID"
+      src="https://vimeo.com/1081106970/70594f4e3f?share=copy&fl=sv&fe=ci"
       allow="autoplay; fullscreen; picture-in-picture"
       allowfullscreen>
     </iframe>
   </div>
 
   <!-- IMAGEM 2 -->
-  <img src="color2.png" alt="Send Me a Color – image 2">
+  <img src="pag3.png" alt="Send Me a Color – image 2">
 
   <!-- IMAGEM 3 -->
-  <img src="color3.png" alt="Send Me a Color – image 3">
+  <img src="pag4.png" alt="Send Me a Color – image 3">
 
 </section>
 
