--- a/artistic-works.html
+++ b/artistic-works.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Artistic Works – Mariana Torres</title>
+  <title>Send me a Color – Mariana Torres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Fonts -->
@@ -241,7 +241,7 @@
         <li class="dropdown">
           <a href="projects.html">Projects ▾</a>
           <ul class="dropdown-content">
-            <li><a href="artistic-works.html">Artistic Works</a></li>
+            <li><a href="artistic-works.html">Send me a Color</a></li>
             <li><a href="research-preservation.html">Research & Preservation Works</a></li>
           </ul>
         </li>
@@ -259,20 +259,11 @@
       </ul>
     </nav>
   </header>
-
-
-  <!-- ---------------- CONTENT ---------------- -->
-  <div class="page-wrapper">
-
-    <h1>ARTISTIC WORKS</h1>
-
     <!-- ---------- PROJECT TEMPLATE (copy/paste for each work) ---------- -->
 
     <div class="project-item">
       <h2>Send Me a Color</h2>
       <div class="project-meta">16mm Performance · 2024</div>
-
-  
   </p>
 
  <section class="media-block">
