--- a/artistic-works.html
+++ b/artistic-works.html
@@ -135,96 +135,61 @@
 
     /* ---------------- PAGE STRUCTURE ---------------- */
 
-   .page-wrapper {
-      padding-top: 130px; /* space for fixed header */
+    .page-wrapper {
+      padding-top: 110px; /* espaço para o header fixo */
       max-width: var(--max-width);
-      margin: 0 auto;
+      margin: 0 auto 80px;
       padding-left: 20px;
       padding-right: 20px;
     }
 
-    h1 {
-      font-family: "Bebas Kai";
-      font-size: 2.8rem;
-      letter-spacing: 0.12em;
-      margin-bottom: 0.6rem;
-      text-align: center;
-    }
-
-    .intro-text {
-      text-align: center;
-      color: var(--text-muted);
-      max-width: 760px;
-      margin: 0 auto 50px;
-      font-size: 1.05rem;
-      line-height: 1.75;
-    }
-
-    /* Project Blocks */
-    .project-item {
-      margin-bottom: 70px;
-      border-left: 1px solid rgba(255,255,255,0.06);
-      padding-left: 22px;
-    }
-
-    .project-item h2 {
-      font-family: "Bebas Kai";
-      letter-spacing: 0.08em;
-      margin-bottom: 0.3rem;
-      font-size: 1.9rem;
-    }
-
-    .project-meta {
-      color: var(--text-muted);
-      font-size: 0.9rem;
-      margin-bottom: 1rem;
-    }
-
-    .project-item p {
-      font-size: 1rem;
-      line-height: 1.7;
-      margin-bottom: 1rem;
-    }
-
-    .project-image {
-      margin-top: 20px;
-      max-width: 100%;
-      border-radius: 6px;
-      opacity: 0.9;
-    }
     /* --- Media Blocks for Artistic Works --- */
+    .media-block {
+      max-width: 900px;
+      margin: 0 auto;
+    }
 
-.media-block {
-  max-width: 900px;
-  margin: 0 auto 45px;
-}
+    .media-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-bottom: 24px;
+    }
 
-.media-block img {
-  width: 100%;
-  height: auto;
-  display: block;
-  border-radius: 6px;
-  margin-bottom: 25px;
-}
+    .media-col {
+      flex: 1 1 0;
+      min-width: 260px;
+    }
 
-/* Vimeo video same size as images */
-.video-fixed {
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%; /* 16:9 ratio */
-  margin-bottom: 25px;
-  border-radius: 6px;
-  overflow: hidden;
-}
+    .media-col img {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 6px;
+    }
 
-.video-fixed iframe {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
-}
+    /* Vimeo video com as mesmas dimensões visuais das imagens */
+    .video-fixed {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%; /* 16:9 */
+      border-radius: 6px;
+      overflow: hidden;
+    }
 
+    .video-fixed iframe {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
+    @media (max-width: 700px) {
+      .media-row {
+        flex-direction: column;
+      }
+    }
   </style>
 </head>
 
@@ -259,52 +224,39 @@
       </ul>
     </nav>
   </header>
-    <!-- ---------- PROJECT TEMPLATE (copy/paste for each work) ---------- -->
 
-    <div class="project-item">
-      <h2>Send Me a Color</h2>
-      <div class="project-meta">16mm Performance · 2024</div>
-  </p>
+  <!-- ---------------- CONTENT ---------------- -->
+  <div class="page-wrapper">
 
- <section class="media-block">
+    <section class="media-block">
+      <!-- LINHA 1: IMG1 + VÍDEO -->
+      <div class="media-row">
+        <div class="media-col">
+          <img src="color1.png" alt="Send Me a Color – image 1">
+        </div>
 
-  <!-- IMAGEM 1 -->
-  <img src="pag1 (2).png" alt="Send Me a Color – image 1">
+        <div class="media-col">
+          <div class="video-fixed">
+            <iframe
+              src="https://player.vimeo.com/video/SEU_VIDEO_ID"
+              allow="autoplay; fullscreen; picture-in-picture"
+              allowfullscreen>
+            </iframe>
+          </div>
+        </div>
+      </div>
 
-  <!-- VÍDEO VIMEO (MESMAS DIMENSÕES) -->
-  <div class="video-fixed">
-    <iframe
-      src="https://vimeo.com/1081106970/70594f4e3f?share=copy&fl=sv&fe=ci"
-      allow="autoplay; fullscreen; picture-in-picture"
-      allowfullscreen>
-    </iframe>
-  </div>
+      <!-- LINHA 2: IMG2 + IMG3 -->
+      <div class="media-row">
+        <div class="media-col">
+          <img src="color2.png" alt="Send Me a Color – image 2">
+        </div>
+        <div class="media-col">
+          <img src="color3.png" alt="Send Me a Color – image 3">
+        </div>
+      </div>
+    </section>
 
-  <!-- IMAGEM 2 -->
-  <img src="pag3.png" alt="Send Me a Color – image 2">
-
-  <!-- IMAGEM 3 -->
-  <img src="pag4.png" alt="Send Me a Color – image 3">
-
-</section>
-
-</section>
-
-    </div>
-
-
-    <div class="project-item">
-      <h2>[Title of Artistic Work #2]</h2>
-      <div class="project-meta">Format · Year</div>
-
-      <p>
-        Description text here — you can duplicate this block to add more artworks. 
-        Each project can include stills, notes, links to video, installation views, etc.
-      </p>
-    </div>
-
-
-    <!-- Add more project blocks the same way -->
   </div>
 
 </body>
