--- a/research-preservation.html
+++ b/research-preservation.html
@@ -226,22 +226,17 @@
       <div class="media-grid">
         <!-- TOPO: IMG1 + VÍDEO LADO A LADO EM ECRÃ GRANDE -->
         <div class="media-cell">
-          <img src="color1.png" alt="Send Me a Color – image 1" />
+          <img src="pag4.png" alt="pag4.png />
         </div>
 
         <div class="media-cell">
           <div class="video-fixed">
             <iframe
-              src="https://player.vimeo.com/video/1081106970?h=70594f4e3f"
+              src="https://player.vimeo.com/1084541446/b19ced0966"
               allow="autoplay; fullscreen; picture-in-picture"
               allowfullscreen>
             </iframe>
           </div>
-        </div>
-
-        <!-- BAIXO: IMG2 + IMG3 -->
-        <div class="media-cell">
-          <img src="color2.png" alt="Send Me a Color – image 2" />
         </div>
 
         <div class="media-cell">
